added on the Html and added styling

--- a/src/style.css
+++ b/src/style.css
@@ -2,14 +2,6 @@ body{
     font-family:Arial, Helvetica, sans-serif;
 }
 
-.weather.app{
-    max-width:600px;
-    margin:30px auto;
-    padding:20px;
-    border:1px solid #dadde1;
-    border-radius:5px;
-}
-
 h1{
     color:#878787;
     font-size:24px;
@@ -29,5 +21,40 @@ li{
     font-size:16px;
     font: weight 100px;
     line-height:19px;
-    
+    margin:0 auto;
+    padding:0 auto;
+}
+
+.weather-app-wrapper{
+    max-width:600px;
+    margin:30px 0auto;
+}
+
+.weather.app {
+    padding: 20px;
+    border: 1px solid #dadde1;
+    border-radius: 5px;
+}
+
+.overview{
+    margin-bottom:20px;
+}
+
+.weather-temperature img{
+    margin-right:5px;
+    height:64px;
+    width:64px;
+}
+
+.weather-temperature strong{
+    color:rgb(33,33,33);
+    font-weight:400px;
+    line-height:1px;
+    font-size:30px;
+}
+
+.weather-temperature .units{
+    position:relative;
+    font-size:16px;
+    top:-24px;
 }
