--- a/src/style.css
+++ b/src/style.css
@@ -62,3 +62,13 @@ li{
 li::first-letter{
     text-transform:capitalize;
 }
+
+.weather-temperature .active{
+color:rgb(33,33,33);
+cursor:default;
+text-decoration-line: none;
+}
+
+.weather-temperature .active:hover{
+ text-decoration-line: none;
+}
